force-app/main/default/objects/FinServ__FinancialHolding__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the SIP (for completed or cancelled SIPs).</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>