force-app/main/default/objects/FinServ__FinancialHolding__c/fields/Folio_Number__c.field-meta.xml
<CustomField>
    <fullName>Folio_Number__c</fullName>
    <description>Unique folio number assigned by the fund house for this SIP holding.</description>
    <inlineHelpText>Folio number from the fund house.</inlineHelpText>
    <label>Folio Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>