force-app/main/default/objects/FinServ__FinancialHolding__c/fields/Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Fund_Name__c</fullName>
    <description>Display name of the mutual fund scheme (denormalized from Security for quick reference).</description>
    <inlineHelpText>Name of the mutual fund scheme, e.g. "HDFC Mid-Cap Opportunities Fund".</inlineHelpText>
    <label>Fund Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>