force-app/main/default/objects/FinServ__FinancialHolding__c/fields/Installments_Completed__c.field-meta.xml
<CustomField>
    <fullName>Installments_Completed__c</fullName>
    <description>Number of SIP installments successfully processed.</description>
    <inlineHelpText>Count of completed SIP installments.</inlineHelpText>
    <label>Installments Completed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>