force-app/main/default/objects/FinServ__FinancialHolding__c/fields/Next_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Installment_Date__c</fullName>
    <description>Date of the next scheduled SIP installment.</description>
    <label>Next Installment Date</label>
    <type>Date</type>
</CustomField>