force-app/main/default/objects/FinServ__FinancialHolding__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Optional notes or remarks about this holding/SIP.</description>
    <label>Remarks</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>