force-app/main/default/objects/FinServ__FinancialHolding__c/fields/SIP_Amount__c.field-meta.xml
<CustomField>
    <fullName>SIP_Amount__c</fullName>
    <description>The fixed amount invested per SIP installment.</description>
    <inlineHelpText>Amount debited per SIP installment (in INR).</inlineHelpText>
    <label>SIP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>