force-app/main/default/objects/FinServ__FinancialHolding__c/fields/SIP_Day__c.field-meta.xml
<CustomField>
    <fullName>SIP_Day__c</fullName>
    <description>Day of the month when the SIP installment is debited (1-28).</description>
    <inlineHelpText>Day of the month for SIP deduction (e.g. 5 = 5th of every month).</inlineHelpText>
    <label>SIP Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>