force-app/main/default/objects/FinServ__FinancialHolding__c/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bank account from which the SIP installment amount is debited each cycle.</description>
    <inlineHelpText>Bank account debited for each SIP installment.</inlineHelpText>
    <label>Source Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Holdings (Source)</relationshipLabel>
    <relationshipName>Holdings_Source</relationshipName>
    <type>Lookup</type>
</CustomField>