force-app/main/default/objects/FinServ__FinancialHolding__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date when the SIP was started.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>