force-app/main/default/objects/FinServ__FinancialHolding__c/fields/Total_Invested__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested__c</fullName>
    <description>Total amount invested in this SIP so far (sum of all installments).</description>
    <inlineHelpText>Cumulative investment amount across all completed installments.</inlineHelpText>
    <label>Total Invested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>